Fixed a small problem related to URL encoding
git-svn-id: svn://svn.forge.objectweb.org/svnroot/spagobi/V_4.x/Server/trunk@20747 99afaf0d-6903-0410-885a-c66a8bbb5f81